Initial pass at implementing instanced dynamic filtered graphs